<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/newsletter_animation_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/newsletter_animation_view_height"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/newsletter_illustration"
        app:lottie_enableMergePathsForKitKatAndAbove="true"/>

    <TextView
        android:id="@+id/greeting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hi, please log in"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/primary_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newsletter_animation_view"
        android:textSize="@dimen/greet_text_size"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="36dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greeting_text"
        android:background="@drawable/edittext_border"
        android:drawableLeft="@drawable/user_circle"
        android:drawableTint="@color/login_border"
        android:padding="@dimen/login_padding"
        android:textSize="@dimen/login_text_size"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textColorHint="@color/login_border"
        android:textColor="@color/login_border"
        android:drawablePadding="@dimen/login_logo_padding"/>


    <EditText
        android:id="@+id/password"
        android:textStyle="bold"
        android:textColor="@color/login_border"
        android:layout_marginHorizontal="36dp"
        android:textColorHint="@color/login_border"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_border"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:drawableLeft="@drawable/key"
        android:padding="@dimen/login_padding"
        android:drawableTint="@color/login_border"
        android:textSize="@dimen/login_text_size"
        android:drawablePadding="@dimen/login_logo_padding"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="start"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="@dimen/login_bottom_margin"
        android:enabled="false"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:text="@string/action_sign_in_short"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
         />

    <View
        android:id="@+id/login_transition_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_button"
        android:visibility="invisible"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="@id/login"
        app:layout_constraintEnd_toEndOf="@id/login"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toTopOf="@id/login"/>

</androidx.constraintlayout.widget.ConstraintLayout>